--- a/about.Rmd
+++ b/about.Rmd
@@ -1,9 +1,16 @@
 ---
-title: "About me"
-output: 
-  html_document:
-    toc: true
-    toc_float: true
+title: "Ying's Awesome Website"
 ---
 
-My name is Ying and I am learing how to make a website for P8105 !!!
+<center><img src = "image/LION.JPG" style = "width:60%"> </center>
+
+<br />
+
+<center><span style="color:#2C85C2; font-family: Babas; font-size: 2em;">HEALTH IS A HUMAN RIGHT</span></center>
+
+<br/>
+
+
+This is a personal website for Ying Chen, M.D., MS, MA.
+
+Built in October 2019 for course [P8105-Data Science](http://p8105.com/). This class is taught by Dr. [Jeff Goldsmith](https://github.com/jeff-goldsmith). Jeff is an awesome professor in teaching Data Science and he has a cat named TED!
