--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,7 @@ I am currently a Dr.PH student of [__Biostatistics__](https://www.mailman.columb
 I came to the United States on a business trip in 1997. I fell in love with Columbia University and stayed here since then. 
 I have a MD, a MS and a MA degree. 
 
+[Learn more about me...](resume.html)
 
 ### <span style="color:#2C85C2; font-family: Babas; font-size: 1em;">Contact me</span>
 
